@@ -372,8 +372,15 @@ bool ts::UDPSocket::receive(void* data,
         // Wait for a message.
         const SocketErrorCode err = receiveOne(data, max_size, ret_size, sender, destination, report);
 
-        if (err == SYS_SUCCESS) {
-            return true;
+        if (abort != 0 && abort->aborting()) {
+            // Aborting, no error message.
+            return false;
+        }
+        else if (err == SYS_SUCCESS) {
+            // Sometimes, we get "successful" empty message coming from nowhere. Ignore them.
+            if (ret_size > 0 || sender.hasAddress()) {
+                return true;
+            }
         }
         else if (abort != 0 && abort->aborting()) {
             // User-interrupt, end of processing but no error message
