@@ -15,6 +15,8 @@ Version 3.12-770
 - Added options --log-protocol and --log-data to "tsecmg", "tsemmg" and plugins
   "scrambler", "datainject".
 
+- Added options --udp and --unregulated to plugin "datainject".
+
 - Many more descriptors are supported. See the user's guide.
 
 - On Windows, portable packages are now built for users without admin privilege.
